# redis-tower

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEX_REVIEW.md  COMMANDS.md  COMMANDS_TRACKING.md  COMMAND_COVERAGE.md  COMMAND_COVERAGE_AUDIT.md  COMMAND_COVERAGE_REPORT.md  COMMAND_COVERAGE_SUMMARY.md  CONTRIBUTING.md  COVERAGE_SUMMARY.txt  Cargo.toml  DESIGN.md  DOCKER_CLUSTER.md  FEATURE_MATRIX.md  HEALTHCHECK_CODE_REVIEW.md  HEALTHCHECK_RECHECK.md  ISSUES.md  LICENSE-APACHE  MISSING_COMMANDS.md  MISSING_COMMANDS_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  POOL_IMPROVEMENTS.md  README.md  SECURITY.md  SENTINEL_DESIGN.md  TOWER_POOL_ASSESSMENT.md  TOWER_POOL_CODE_REVIEW.md  WRAPPER_API_DESIGN.md  cliff.toml  deny.toml  docker-compose.yml  release-plz.toml  roba.toml
.github/: FUNDING.yml  pull_request_template.md
.worktrees/: redis-server-wrapper
benches/: comparison.rs
comparisons/caching/tower/: Cargo.toml
comparisons/caching/tower/src/: main.rs
comparisons/job-queue/tower/: Cargo.toml
comparisons/job-queue/tower/src/: main.rs
comparisons/leaderboard/tower/: Cargo.toml
comparisons/leaderboard/tower/src/: main.rs
comparisons/rate-limiter/tower/: Cargo.toml
comparisons/rate-limiter/tower/src/: main.rs
crates/cluster-bench/: Cargo.toml  README.md
crates/cluster-bench/src/: clients.rs  concurrent.rs  main.rs  multiplexed_cluster.rs  runner.rs
crates/redis-test-harness/: Cargo.toml
crates/redis-test-harness/src/: cluster.rs  command_tests.rs  lib.rs  mock.rs  sentinel.rs  standalone.rs  util.rs
crates/redis-test-harness/src/wrapper/: cli.rs  cluster.rs  mod.rs  sentinel.rs  server.rs
crates/redis-tower/: CHANGELOG.md  Cargo.toml
crates/redis-tower-client/: Cargo.toml
crates/redis-tower-client/src/: lib.rs
crates/redis-tower-client/tests/: standalone.rs
crates/redis-tower-cluster/: CHANGELOG.md  Cargo.toml
crates/redis-tower-cluster/src/: client.rs  connection.rs  key_extractor.rs  lib.rs  multiplexed.rs  slot.rs  topology.rs
crates/redis-tower-cluster/tests/: cluster_integration.rs
crates/redis-tower-commands/: CHANGELOG.md  Cargo.toml
crates/redis-tower-commands/src/: acl.rs  bitmap.rs  blocking.rs  bloom.rs  cluster.rs  diagnostics.rs  geo.rs  hashes.rs  help.rs  hyperloglog.rs  json.rs  keys.rs  lib.rs  lists.rs  pubsub.rs  raw.rs  scan.rs  scripting.rs  search.rs  search_util.rs  server.rs  sets.rs  sketch.rs  sorted_sets.rs  streams.rs  strings.rs  tdigest.rs  timeseries.rs  transaction.rs  vector_sets.rs
crates/redis-tower-commands/tests/: parse_response.rs  proptest_builders.rs
crates/redis-tower-core/: CHANGELOG.md  Cargo.toml
crates/redis-tower-core/src/: command.rs  connection.rs  error.rs  frame_service.rs  from_frame.rs  lib.rs  stream.rs  tls.rs  url.rs  value.rs
crates/redis-tower-modules/: CHANGELOG.md  Cargo.toml
crates/redis-tower-modules/src/: json.rs  lib.rs  probabilistic.rs  search.rs  timeseries.rs  vector.rs
crates/redis-tower-modules/tests/: json_integration.rs  probabilistic_integration.rs  search_integration.rs  timeseries_integration.rs  vector_integration.rs
crates/redis-tower-protocol/: CHANGELOG.md  Cargo.toml
crates/redis-tower-protocol/benches/: codec.rs
crates/redis-tower-protocol/src/: codec.rs  error.rs  helpers.rs  lib.rs
crates/redis-tower-sentinel/: CHANGELOG.md  Cargo.toml
crates/redis-tower-sentinel/src/: client.rs  connection.rs  discovery.rs  lib.rs  multiplexed.rs
crates/redis-tower-sentinel/tests/: sentinel_failover.rs  sentinel_integration.rs
crates/redis-tower-sync/: CHANGELOG.md  Cargo.toml
crates/redis-tower-sync/src/: lib.rs
crates/redis-tower-sync/tests/: sync_integration.rs
crates/redis-tower/benches/: commands.rs
crates/redis-tower/examples/: auto_pipeline.rs  basic.rs  pipeline.rs  pubsub.rs  reconnect.rs  resilience.rs  shared_client.rs  streams.rs  transaction.rs
crates/redis-tower/src/: auto_pipeline.rs  cache_layer.rs  cache_state.rs  caching.rs  circuit_breaker.rs  client.rs  command_adapter.rs  command_timeout.rs  consumer.rs  credentials.rs  executor.rs  json_api.rs  lib.rs  metrics_layer.rs  multiplexed.rs  pipeline.rs  pool.rs  pubsub.rs  reconnect.rs  reconnect_layer.rs  resilient.rs  retry.rs  scan_stream.rs  script.rs  search_api.rs  tracing_layer.rs  transaction.rs
crates/redis-tower/tests/: command_coverage.rs  command_coverage_2.rs  integration.rs  test_acl.rs  test_auth.rs  test_bitmap.rs  test_bloom.rs  test_cluster.rs  test_errors.rs  test_exotic.rs  test_geo.rs  test_hashes.rs  test_hyperloglog.rs  test_infrastructure.rs  test_keys.rs  test_large_values.rs  test_lists.rs  test_object.rs  test_pool.rs  test_resilience_integration.rs  test_scan_stream.rs  test_scripting.rs  test_server.rs  test_sets.rs  test_sorted_sets.rs  test_streams.rs  test_strings.rs
crates/redis-tower/tests/common/: mod.rs
crates/sentinel-bench/: Cargo.toml  README.md
crates/sentinel-bench/src/: clients.rs  main.rs  runner.rs
crates/standalone-bench/: Cargo.toml
crates/standalone-bench/src/: clients.rs  main.rs  runner.rs
docs/: BENCHMARK_RESULTS.md  CLIENT_SIDE_CACHING_ANALYSIS.md  CLIENT_TYPES.md  FEATURE-MATRIX.md  FEATURE_COMPARISON.md  FEATURE_MATRIX.md  FEATURE_PARITY.md  HEALTHCHECK_DESIGN.md  ISSUE_TRACKING.md  MIGRATING-FROM-REDIS-RS.md  PARITY_CHECKLIST.md  RESP_PARSER_INTEGRATION.md
examples/: Cargo.toml  basic.rs  client_types_comparison.rs  cluster.rs  cluster_read_from_replica.rs  cluster_with_tower.rs  commands.rs  complex_commands.rs  connection_pool.rs  error_hooks.rs  essential.rs  geospatial.rs  health_check_example.rs  healthcheck_example.rs  json_api.rs  level4_commands.rs  metrics_example.rs  monitor_streaming.rs  pipeline_atomic.rs  pipeline_basic.rs  pipeline_cluster.rs  pool_dynamic_scaling.rs  pubsub.rs  reconnect.rs  resilience.rs  resilient.rs  resilient_client.rs  script.rs  scripting.rs  sentinel.rs  sentinel_basic.rs  serde_json.rs  sets.rs  sorted_sets.rs  streaming_scan.rs  streaming_xread.rs  streams_consumer_groups.rs  tcp_tuning.rs  tls.rs  tls_connection.rs  (+6 more)
scripts/: count-commands.sh  (+1 more)
src/: client.rs  (+19 more)
(+161 files in other folders)
