[workspace]
resolver = "3"
members = [
    "crates/redis-tower-protocol",
    "crates/redis-tower-core",
    "crates/redis-tower-commands",
    "crates/redis-tower",
    "crates/redis-tower-cluster",
    "crates/redis-tower-sentinel",
    "crates/redis-tower-sync",
    "crates/redis-tower-modules",
    "crates/redis-tower-client",
    "crates/redis-test-harness",
    "crates/cluster-bench",
    "crates/standalone-bench",
    "examples",
]

[workspace.package]
edition = "2024"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/redis-tower"
homepage = "https://github.com/joshrotenberg/redis-tower"
readme = "README.md"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates
redis-tower = { version = "0.1.0", path = "crates/redis-tower" }
redis-tower-protocol = { version = "0.1.1", path = "crates/redis-tower-protocol" }
redis-tower-core = { version = "0.1.0", path = "crates/redis-tower-core" }
redis-tower-commands = { version = "0.1.0", path = "crates/redis-tower-commands" }
redis-tower-cluster = { version = "0.1.0", path = "crates/redis-tower-cluster" }
redis-tower-sentinel = { version = "0.1.0", path = "crates/redis-tower-sentinel" }
redis-tower-modules = { version = "0.1.0", path = "crates/redis-tower-modules" }
redis-tower-client = { version = "0.1.0", path = "crates/redis-tower-client" }

# Async runtime
async-stream = "0.3"
tokio = { version = "1.42", features = ["net", "rt", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
pin-project-lite = "0.2"

# Protocol
resp-rs = "0.1"
bytes = "1.9"

# Tower
tower = { version = "0.5", features = ["util", "buffer", "timeout"] }
tower-layer = "0.3"
tower-service = "0.3"

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"

# Testing
redis-server-wrapper = { version = "0.4.1", features = ["test-tls"] }

# Hashing
sha1 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Testing
tokio-test = "0.4"
proptest = "1"
