[package]
name = "cluster-bench"
version = "0.0.0"
edition.workspace = true
publish = false

[[bin]]
name = "cluster-bench"
path = "src/main.rs"

[dependencies]
redis-tower = { path = "../redis-tower" }
redis-tower-cluster = { path = "../redis-tower-cluster" }
redis-tower-commands = { path = "../redis-tower-commands" }
redis-tower-core = { path = "../redis-tower-core" }
redis-tower-protocol = { path = "../redis-tower-protocol" }
redis-test-harness = { path = "../redis-test-harness" }

redis = { version = "1.2", features = ["cluster", "cluster-async", "tokio-comp"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
bytes = { workspace = true }
futures = { workspace = true }
