[package]
name = "redis-test-harness"
version = "0.1.0"
description = "Redis topology management for integration testing (cluster, sentinel)"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
redis-tower-protocol = { workspace = true }
redis-tower-core = { workspace = true }
bytes = { workspace = true }
