[package]
name = "redis-test-harness"
version = "0.1.0"
description = "Test utilities for redis-tower (mock connections, command test macros)"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
redis-tower-protocol = { workspace = true }
redis-tower-core = { workspace = true }
bytes = { workspace = true }
