[package]
name = "redis-tower-test"
version = "0.1.0"
description = "Test utilities for redis-tower: MockConnection and the command_tests! integration macro"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["redis", "testing", "mock", "tower"]
categories = ["database", "development-tools::testing"]

[dependencies]
redis-tower-protocol = { workspace = true }
redis-tower-core = { workspace = true }
bytes = { workspace = true }
