[package]
name = "redis-tower-cluster"
version = "0.1.0"
description = "Redis Cluster support for redis-tower"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["redis", "cluster", "tower", "async"]
categories = ["database", "asynchronous", "network-programming"]

[dependencies]
redis-tower-protocol = { workspace = true }
redis-tower-core = { workspace = true }
redis-tower-commands = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tower-service = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
redis-test-harness = { path = "../redis-test-harness" }
