[package]
name = "redis-tower-cluster"
version = "0.1.0"
description = "Redis Cluster support for redis-tower"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["redis", "cluster", "tower", "async"]
categories = ["database", "asynchronous", "network-programming"]

[features]
default = []
# Forward TLS backends to redis-tower-core / redis-tower. Enabling one of
# these makes the `.tls()` builder method available on both
# ClusterConnectionBuilder and MultiplexedClusterClientBuilder.
tls-rustls = [
    "redis-tower-core/tls-rustls",
    "redis-tower/tls-rustls",
]
tls-native-tls = [
    "redis-tower-core/tls-native-tls",
    "redis-tower/tls-native-tls",
]

[dependencies]
redis-tower = { workspace = true }
redis-tower-protocol = { workspace = true }
redis-tower-core = { workspace = true }
redis-tower-commands = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tower-service = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
redis-tower-test = { path = "../redis-test-harness" }
redis-server-wrapper = { workspace = true }
proptest = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
