[package]
name = "redis-tower-commands"
version = "0.1.0"
description = "Typed Redis command implementations for redis-tower"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
redis-tower-protocol = { workspace = true }
redis-tower-core = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
redis-test-harness = { path = "../redis-test-harness" }
