[package]
name = "redis-tower-commands"
version = "0.1.0"
description = "Typed Redis command implementations for redis-tower"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["redis", "commands", "typed", "async"]
categories = ["database", "asynchronous", "network-programming"]

[features]
default = ["stack"]
stack = ["json", "search", "bloom", "sketch", "tdigest", "timeseries", "vector-sets"]
json = []
search = []
bloom = []
sketch = []
tdigest = []
timeseries = []
vector-sets = []

[dependencies]
redis-tower-protocol = { workspace = true }
redis-tower-core = { workspace = true }
bytes = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
redis-test-harness = { path = "../redis-test-harness" }
proptest = { workspace = true }
tokio-util = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
