[package]
name = "redis-tower-protocol"
version = "0.1.0"
description = "RESP protocol types and codec for redis-tower, backed by resp-rs"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["redis", "resp", "protocol", "codec"]
categories = ["database", "asynchronous", "network-programming"]

[dependencies]
resp-rs = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
