[package]
name = "redis-tower-protocol"
version = "0.1.1"
description = "RESP protocol types and codec for redis-tower, backed by resp-rs"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["redis", "resp", "protocol", "codec"]
categories = ["database", "asynchronous", "network-programming"]

[features]
# Enables `helpers::frame_to_json` for converting frames into `serde_json::Value`.
serde = ["dep:serde_json"]

[dependencies]
resp-rs = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "codec"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
