[package]
name = "redis-tower"
version = "0.1.0"
description = "A Tower-based Redis client with strong typing, composable middleware, and resilience"
documentation = "https://docs.rs/redis-tower"
homepage = "https://github.com/joshrotenberg/redis-tower"
keywords = ["redis", "tower", "async", "client", "middleware"]
categories = ["database", "asynchronous", "network-programming"]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["commands-stack"]
tls-native-tls = ["redis-tower-core/tls-native-tls"]
tls-rustls = ["redis-tower-core/tls-rustls"]
# Redis Stack module commands (requires Redis Stack server)
commands-stack = ["commands-json", "commands-search", "commands-bloom", "commands-sketch", "commands-tdigest", "commands-timeseries", "commands-vector-sets"]
commands-json = ["redis-tower-commands/json"]
commands-search = ["redis-tower-commands/search"]
commands-bloom = ["redis-tower-commands/bloom"]
commands-sketch = ["redis-tower-commands/sketch"]
commands-tdigest = ["redis-tower-commands/tdigest"]
commands-timeseries = ["redis-tower-commands/timeseries"]
commands-vector-sets = ["redis-tower-commands/vector-sets"]

[dependencies]
redis-tower-protocol = { workspace = true }
redis-tower-core = { workspace = true }
redis-tower-commands = { workspace = true }
async-stream = { workspace = true }

tower-service = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
tower-layer = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tokio-stream = { workspace = true }
tower = { workspace = true, features = ["buffer", "timeout"] }
bytes = { workspace = true }
redis-tower-protocol = { workspace = true }
redis-test-harness = { path = "../redis-test-harness" }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "commands"
harness = false
