[package]
name = "standalone-bench"
version = "0.0.0"
edition.workspace = true
publish = false

[[bin]]
name = "standalone-bench"
path = "src/main.rs"

[dependencies]
redis-tower = { path = "../redis-tower" }
redis-tower-commands = { path = "../redis-tower-commands" }
redis-tower-core = { path = "../redis-tower-core" }
redis-server-wrapper = { workspace = true }

redis = { version = "1.2", features = ["tokio-comp"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
bytes = { workspace = true }
futures = { workspace = true }
