[package]
name = "job-queue-tower"
version = "0.1.0"
edition = "2024"

[dependencies]
redis-tower = { path = "../../../crates/redis-tower", default-features = false }
redis-tower-core = { path = "../../../crates/redis-tower-core" }
redis-tower-commands = { path = "../../../crates/redis-tower-commands" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
